welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Missing closing brace `}' assumed here
for (course<-0 to 6){
^